--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "dist/"
   ],
   "scripts": {
-    "build": "rollup -c && tsc -d --emitDeclarationOnly"
+    "build": "rollup -c && tsc -d --emitDeclarationOnly",
+    "test": "jest",
+    "coverage": "jest --collectCoverage"
   },
   "repository": {
     "type": "git",
@@ -24,13 +26,30 @@
   },
   "homepage": "https://github.com/hotjar/hotjar-js#readme",
   "devDependencies": {
+    "@babel/core": "^7.14.0",
+    "@babel/preset-env": "^7.14.1",
+    "@babel/preset-typescript": "^7.13.0",
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-typescript": "^8.2.1",
+    "@types/jest": "^26.0.23",
+    "babel-jest": "^26.6.3",
     "eslint": "^7.26.0",
+    "jest": "^26.6.3",
     "prettier": "^2.3.0",
     "rollup": "^2.47.0",
     "rollup-plugin-terser": "^7.0.2",
+    "ts-jest": "^26.5.6",
     "tslib": "^2.2.0",
     "typescript": "^4.2.4"
+  },
+  "jest": {
+    "verbose": true,
+    "coverageProvider": "v8",
+    "coverageReporters": [
+      "text"
+    ],
+    "transform": {
+      "^.+\\.ts?$": "ts-jest"
+    }
   }
 }
