--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "scripts": {
     "build": "rollup -c && tsc -d --emitDeclarationOnly",
     "test": "jest",
-    "coverage": "jest --collectCoverage"
+    "coverage": "jest --collectCoverage",
+    "lint-check": "eslint 'src/**/*.{js,ts,tsx}'",
+    "lint-fix": "eslint 'src/**/*.{js,ts,tsx}' --fix"
   },
   "repository": {
     "type": "git",
@@ -32,8 +34,13 @@
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-typescript": "^8.2.1",
     "@types/jest": "^26.0.23",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
     "babel-jest": "^26.6.3",
     "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jest": "^24.3.6",
+    "eslint-plugin-prettier": "^3.4.0",
     "jest": "^26.6.3",
     "prettier": "^2.3.0",
     "rollup": "^2.47.0",
