--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hotjar/sdk",
+  "name": "@hotjar/browser",
   "version": "0.0.0",
   "description": "",
   "main": "dist/index.js",
@@ -13,6 +13,8 @@
   "scripts": {
     "build": "rollup -c && tsc -d --emitDeclarationOnly",
     "test": "jest",
+    "build-demo": "webpack --config ./demo/webpack.config.demo.js",
+    "run-demo": "webpack serve --config ./demo/webpack.config.demo.js",
     "coverage": "jest --collectCoverage",
     "lint-check": "eslint 'src/**/*.{js,ts,tsx}'",
     "lint-fix": "eslint 'src/**/*.{js,ts,tsx}' --fix"
@@ -37,17 +39,24 @@
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
     "babel-jest": "^26.6.3",
+    "copy-webpack-plugin": "^8.1.1",
+    "css-loader": "^5.2.4",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-prettier": "^3.4.0",
+    "html-webpack-plugin": "^5.3.1",
     "jest": "^26.6.3",
     "prettier": "^2.3.0",
     "rollup": "^2.47.0",
     "rollup-plugin-terser": "^7.0.2",
+    "style-loader": "^2.0.0",
     "ts-jest": "^26.5.6",
     "tslib": "^2.2.0",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "webpack": "^5.37.0",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "jest": {
     "verbose": true,
