--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "scripts": {
     "build": "rollup -c && tsc -d --emitDeclarationOnly",
     "test": "jest",
-    "build-demo": "webpack --config ./demo/webpack.config.demo.js",
-    "run-demo": "webpack serve --config ./demo/webpack.config.demo.js",
+    "build-demo": "npm run build && webpack --config ./demo/webpack.config.demo.js",
+    "run-demo": "npm run build && webpack serve --config ./demo/webpack.config.demo.js",
+    "deploy-demo": "npm run build-demo && gh-pages -d demo_dist",
     "coverage": "jest --collectCoverage",
     "lint-check": "eslint 'src/**/*.{js,ts,tsx}'",
     "lint-fix": "eslint 'src/**/*.{js,ts,tsx}' --fix"
@@ -45,6 +46,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-prettier": "^3.4.0",
+    "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^5.3.1",
     "jest": "^26.6.3",
     "prettier": "^2.3.0",
