--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "prettier": "^2.3.0",
     "rollup": "^2.47.0",
     "rollup-plugin-terser": "^7.0.2",
+    "standard-version": "^9.3.0",
     "style-loader": "^2.0.0",
     "ts-jest": "^26.5.6",
     "tslib": "^2.2.0",
