Test github actions

--- a/package.json
+++ b/package.json
@@ -68,6 +68,13 @@
     "coverageReporters": [
       "text"
     ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 90,
+        "functions": 90,
+        "lines": 90
+      }
+    },
     "transform": {
       "^.+\\.ts?$": "ts-jest"
     }
