--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,3 +1,5 @@
+name: Testing the lib
+
 on:
   pull_request:
     branches:
@@ -9,5 +11,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: npm ci
+      - run: npm run build
       - run: npm run lint-check
       - run: npm run coverage
