--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: '14.x'
           registry-url: 'https://registry.npmjs.org'
-      - run: git config user.email "mass.zambelli@gmail.com" && git config user.name "Massimo Zambelli"
+      - run: git config user.email "arran.white@hotjar.com" && git config user.name "Arran White"
       - name: Install dependencies
         run: npm ci
       - name: Build library
